--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sinon-chai": "~2.7.0",
     "vinyl-buffer": "~1.0.0",
     "vinyl-source-stream": "~1.1.0",
-    "watchify": "~3.1.1"
+    "watchify": "~3.1.1",
+    "gulp-gjslint": "~0.1.4"
   }
 }
