--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Documentation for Incremental DOM",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-rename": "^1.2.2",
     "gulp-vulcanize": "^6.0.1"
   },
   "author": "Sepand Parhami"
