--- a/package.json
+++ b/package.json
@@ -6,27 +6,29 @@
   "author": "The Incremental DOM Authors",
   "license": "Apache-2.0",
   "devDependencies": {
-    "browserify": "~9.0.8",
-    "del": "~1.1.1",
+    "browserify": "^10.2.4",
+    "chai": "^3.0.0",
+    "del": "^1.2.0",
     "envify": "~3.4.0",
     "es6ify": "~1.6.0",
-    "gulp": "~3.8.11",
+    "gulp": "^3.9.0",
     "gulp-git": "~1.2.4",
     "gulp-gjslint": "~0.1.4",
     "gulp-sourcemaps": "~1.5.1",
     "gulp-uglify": "~1.2.0",
     "gulp-util": "~3.0.4",
-    "karma": "~0.12.31",
-    "karma-browserify": "~4.1.2",
-    "karma-chrome-launcher": "~0.1.7",
+    "karma": "^0.12.37",
+    "karma-browserify": "^4.2.1",
+    "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "~0.1.4",
-    "karma-mocha": "~0.1.10",
-    "karma-sinon-chai": "~0.3.0",
-    "lodash": "~3.6.0",
-    "mocha": "~2.2.4",
-    "sinon-chai": "~2.7.0",
+    "karma-mocha": "^0.2.0",
+    "karma-sinon-chai": "^1.0.0",
+    "lodash": "^3.10.0",
+    "mocha": "^2.2.5",
+    "sinon": "^1.15.4",
+    "sinon-chai": "^2.8.0",
     "vinyl-buffer": "~1.0.0",
     "vinyl-source-stream": "~1.1.0",
-    "watchify": "~3.1.1"
+    "watchify": "^3.2.3"
   }
 }
