--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "dist": "gulp dist"
   },
   "devDependencies": {
+    "babelify": "^6.1.2",
     "browserify": "^10.2.4",
     "chai": "^3.0.0",
     "del": "^1.2.0",
     "envify": "~3.4.0",
-    "es6ify": "~1.6.0",
+    "esperanto": "^0.7.3",
     "gulp": "^3.9.0",
     "gulp-git": "~1.2.4",
     "gulp-gjslint": "~0.1.4",
