--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dist": "gulp dist"
   },
   "devDependencies": {
+    "babel": "^5.6.14",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
     "chai": "^3.0.0",
