--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dist": "gulp dist"
   },
   "devDependencies": {
-    "babel": "^5.6.14",
+    "babel-core": "^5.6.17",
+    "babel-plugin-inline-environment-variables": "^1.0.1",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
     "chai": "^3.0.0",
@@ -24,6 +25,8 @@
     "envify": "~3.4.0",
     "esperanto": "^0.7.3",
     "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0",
+    "gulp-file": "^0.2.0",
     "gulp-git": "~1.2.4",
     "gulp-gjslint": "~0.1.4",
     "gulp-sourcemaps": "~1.5.1",
