--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "gulp unit",
     "lint": "gulp lint",
     "build": "gulp build",
-    "dist": "gulp dist"
+    "dist": "gulp dist",
+    "prepublish": "gulp dist"
   },
   "devDependencies": {
     "babel-core": "^5.6.17",
