--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "dist": "gulp dist"
   },
   "devDependencies": {
-    "babelify": "^6.1.3",
     "browserify": "^10.2.4",
     "chai": "^3.0.0",
     "del": "^1.2.0",
-    "envify": "~3.4.0",
+    "es6ify": "~1.6.0",
+    "esperanto": "^0.7.3",
     "gulp": "^3.9.0",
-    "gulp-es6-module-to-closure": "^1.0.7",
+    "gulp-babel": "^5.1.0",
+    "gulp-file": "^0.2.0",
     "gulp-git": "~1.2.4",
     "gulp-gjslint": "~0.1.4",
     "gulp-sourcemaps": "~1.5.1",
@@ -34,7 +35,6 @@
     "karma-firefox-launcher": "~0.1.4",
     "karma-mocha": "^0.2.0",
     "karma-sinon-chai": "^1.0.0",
-    "lodash.assign": "^3.2.0",
     "mocha": "^2.2.5",
     "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0",
