Add `src` folder to the release package

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "url": "https://github.com/google/incremental-dom.git"
   },
   "files" : [
+    "index.js",
+    "src",
     "dist"
   ],
   "scripts": {
