--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sinon-chai": "^2.8.0",
     "vinyl-buffer": "~1.0.0",
     "vinyl-source-stream": "~1.1.0",
-    "watchify": "^3.2.3"
+    "watchify": "^3.2.3",
+    "webcomponents.js": "^0.7.2"
   }
 }
