Adding Travis CI integration

--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "~0.1.4",
     "karma-mocha": "^0.2.0",
+    "karma-phantomjs-launcher": "~0.2.1",
     "karma-sinon-chai": "^1.0.0",
     "mocha": "^2.2.5",
+    "phantomjs": "~1.9.18",
     "rollup": "^0.14.0",
     "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0",
