Use Chrome and Firefox for Travis (and dist) unit test targets.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - 0.10
+befofe_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 # This is basically redundant (ends up getting run twice) as this gets called
 # by npm on install due to the prepublish script in package.json.
 script:
