Several build changes
- Changing functions to not use done and instead return promises where possible.
- Changing non-minified build to replace process.env.NODE_ENV with development.
- Changing closure build to use goog.DEBUG rather than stripping asserts.
- Changing dist target to clean the dist directory.
- Adding CommonJS build target, which is the entry point when installed from NPM. This saves the payload of the UMD header and allows for substituing process.env.NODE_ENV as desired.
- Updating node version for travis to 0.12.

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,6 @@
 {
   "loose": ["all"],
   "whitelist": [
-    "es6.properties.computed",
-    "utility.inlineEnvironmentVariables"
-  ],
-  "optional": "utility.inlineEnvironmentVariables"
+    "es6.properties.computed"
+  ]
 }
