--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "incremental-dom",
   "version": "0.1.0",
   "description": "An in-place virtual DOM library",
-  "main": "dist/incremental-dom.js",
+  "main": "dist/incremental-dom-cjs.js",
   "author": "The Incremental DOM Authors",
   "license": "Apache-2.0",
   "repository": {
@@ -24,12 +24,13 @@
   "devDependencies": {
     "browserify": "^10.2.4",
     "chai": "^3.0.0",
-    "del": "^1.2.0",
+    "del": "^2.0.2",
     "es6ify": "~1.6.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
     "gulp-file": "^0.2.0",
     "gulp-gjslint": "~0.1.4",
+    "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "~1.5.1",
     "gulp-uglify": "~1.2.0",
     "gulp-util": "~3.0.4",
