--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
-  "loose": ["all"],
-  "whitelist": [
-    "es6.modules",
-    "es6.properties.computed",
-    "es6.arrowFunctions"
+  "plugins": [
+    "check-es2015-constants",
+    "transform-es2015-arrow-functions",
+    "transform-es2015-block-scoping",
+    "transform-es2015-computed-properties",
+    "transform-es2015-modules-commonjs"
   ]
 }
