--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
     "prepublish": "npm run dist"
   },
   "devDependencies": {
-    "babelify": "^6.4.0",
+    "babelify": "^7.2.0",
+    "babel-plugin-check-es2015-constants": "~6.3.13",
+    "babel-plugin-transform-es2015-arrow-functions": "~6.5.2",
+    "babel-plugin-transform-es2015-block-scoping": "~6.5.0",
+    "babel-plugin-transform-es2015-computed-properties": "~6.5.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "~6.5.2",
+    "babel-plugin-transform-inline-environment-variables": "~6.3.13",
     "browserify": "^10.2.4",
     "chai": "^3.0.0",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-file": "^0.2.0",
     "gulp-gjslint": "~0.1.4",
     "gulp-replace": "^0.5.4",
