--- a/package.json
+++ b/package.json
@@ -22,39 +22,36 @@
     "prepublish": "npm run dist"
   },
   "devDependencies": {
-    "babelify": "^7.2.0",
-    "babel-plugin-check-es2015-constants": "~6.3.13",
-    "babel-plugin-transform-es2015-arrow-functions": "~6.5.2",
-    "babel-plugin-transform-es2015-block-scoping": "~6.5.0",
-    "babel-plugin-transform-es2015-computed-properties": "~6.5.2",
-    "babel-plugin-transform-es2015-modules-commonjs": "~6.5.2",
-    "babel-plugin-transform-inline-environment-variables": "~6.3.13",
-    "browserify": "^10.2.4",
+    "babel": "^6.5.2",
+    "babel-plugin-check-es2015-constants": "^6.3.13",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
+    "babel-plugin-transform-es2015-computed-properties": "^6.5.2",
+    "babel-plugin-transform-inline-environment-variables": "^6.5.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.5.0",
     "chai": "^3.0.0",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-file": "^0.2.0",
-    "gulp-gjslint": "~0.1.4",
+    "gulp-gjslint": "^0.1.4",
     "gulp-replace": "^0.5.4",
-    "gulp-sourcemaps": "~1.5.1",
-    "gulp-uglify": "~1.2.0",
-    "gulp-util": "~3.0.4",
+    "gulp-sourcemaps": "^1.6.0",
     "karma": "^0.12.37",
-    "karma-browserify": "^4.2.1",
     "karma-chrome-launcher": "^0.2.0",
-    "karma-firefox-launcher": "~0.1.4",
+    "karma-firefox-launcher": "^0.1.4",
     "karma-mocha": "^0.2.0",
-    "karma-phantomjs-launcher": "~0.2.1",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-rollup-preprocessor": "^2.0.1",
     "karma-sinon-chai": "^1.0.0",
     "mocha": "^2.2.5",
-    "phantomjs": "~1.9.18",
+    "phantomjs": "^1.9.18",
     "rollup": "^0.25.1",
+    "rollup-plugin-babel": "^2.3.9",
+    "rollup-plugin-multi-entry": "^1.1.0",
+    "rollup-plugin-uglify": "^0.2.0",
+    "rollup-stream": "^1.4.1",
     "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0",
-    "vinyl-buffer": "~1.0.0",
-    "vinyl-source-stream": "~1.1.0",
-    "watchify": "^3.2.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "webcomponents.js": "^0.7.2"
   }
 }
