--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
-  - 0.12
+  - 4
+sudo: false
 # This is basically redundant (ends up getting run twice) as this gets called
 # by npm on install due to the prepublish script in package.json.
 script:
