--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,6 @@
     "transform-es2015-arrow-functions",
     "transform-es2015-block-scoping",
     "transform-es2015-computed-properties",
+    "transform-es2015-template-literals"
   ]
 }
