--- a/package.json
+++ b/package.json
@@ -35,19 +35,20 @@
     "gulp-gjslint": "^0.1.4",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.6.0",
-    "karma": "^0.12.37",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "^0.1.4",
     "karma-mocha": "^0.2.0",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-rollup-preprocessor": "^2.0.1",
     "karma-sinon-chai": "^1.0.0",
+    "lolex": "^1.4.0",
     "mocha": "^2.2.5",
-    "phantomjs": "^1.9.18",
+    "phantomjs-prebuilt": "^2.1.7",
     "rollup": "^0.25.1",
     "rollup-plugin-babel": "^2.3.9",
     "rollup-plugin-multi-entry": "^1.1.0",
-    "rollup-plugin-uglify": "^0.2.0",
+    "rollup-plugin-uglify": "^0.3.1",
     "rollup-stream": "^1.4.1",
     "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0",
