--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "del": "^2.0.2",
     "google-closure-compiler": "^20160315.2.0",
     "gulp": "^3.9.0",
-    "gulp-gjslint": "^0.1.4",
+    "gulp-eslint": "^2.0.0",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.6.0",
     "karma": "^0.13.22",
