--- a/.eslintrc
+++ b/.eslintrc
@@ -11,11 +11,11 @@
     "process": true
   },
   "rules": {
-    "no-unused-vars": [
-      "error",
-      {
-        "argsIgnorePattern": "var_args"
-      }
-    ]
+    "no-unused-vars": [2, {"argsIgnorePattern": "var_args"}],
+    "no-trailing-spaces": 2,
+    "no-irregular-whitespace": 2,
+    "space-before-blocks": [2, "always"],
+    "space-before-function-paren": [2, "never"],
+    "keyword-spacing": [2, {"before": true, "after": true}]
   }
 }
