Change versions to restrict dependencies to exact versions.
Fixes source maps remaining inlined in the resulting builds. This makes sure changes to dependencies do not break the build going forward and allows for consistent builds of older releases.

--- a/package.json
+++ b/package.json
@@ -22,37 +22,37 @@
     "prepublish": "npm run dist"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-plugin-check-es2015-constants": "^6.3.13",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
-    "babel-plugin-transform-es2015-block-scoping": "^6.5.0",
-    "babel-plugin-transform-es2015-computed-properties": "^6.5.2",
-    "babel-plugin-transform-es2015-template-literals": "^6.6.5",
-    "babel-plugin-transform-inline-environment-variables": "^6.5.0",
-    "chai": "^3.0.0",
-    "del": "^2.0.2",
-    "google-closure-compiler": "^20160517.1.0",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^2.0.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-sourcemaps": "^1.6.0",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-mocha": "^0.2.0",
-    "karma-rollup-preprocessor": "^2.0.1",
-    "karma-sinon-chai": "^1.0.0",
-    "lolex": "^1.4.0",
-    "mocha": "^2.2.5",
-    "rollup": "^0.25.1",
-    "rollup-plugin-babel": "^2.3.9",
-    "rollup-plugin-multi-entry": "^1.1.0",
-    "rollup-plugin-uglify": "^0.3.1",
-    "rollup-stream": "^1.4.1",
-    "sinon": "^1.15.4",
-    "sinon-chai": "^2.8.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "webcomponents.js": "^0.7.2"
+    "babel": "6.5.2",
+    "babel-plugin-check-es2015-constants": "6.3.13",
+    "babel-plugin-transform-es2015-arrow-functions": "6.5.2",
+    "babel-plugin-transform-es2015-block-scoping": "6.5.0",
+    "babel-plugin-transform-es2015-computed-properties": "6.5.2",
+    "babel-plugin-transform-es2015-template-literals": "6.6.5",
+    "babel-plugin-transform-inline-environment-variables": "6.5.0",
+    "chai": "3.0.0",
+    "del": "2.0.2",
+    "google-closure-compiler": "20160517.1.0",
+    "gulp": "3.9.0",
+    "gulp-eslint": "2.0.0",
+    "gulp-replace": "0.5.4",
+    "gulp-sourcemaps": "1.6.0",
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "0.2.0",
+    "karma-firefox-launcher": "0.1.4",
+    "karma-mocha": "0.2.0",
+    "karma-rollup-preprocessor": "2.0.1",
+    "karma-sinon-chai": "1.0.0",
+    "lolex": "1.4.0",
+    "mocha": "2.2.5",
+    "rollup": "0.25.1",
+    "rollup-plugin-babel": "2.3.9",
+    "rollup-plugin-multi-entry": "1.1.0",
+    "rollup-plugin-uglify": "0.3.1",
+    "rollup-stream": "1.4.1",
+    "sinon": "1.15.4",
+    "sinon-chai": "2.8.0",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
+    "webcomponents.js": "0.7.2"
   }
 }
