Remove process.env.NODE_ENV checks
Instead, use a build-time constant that we can replace with whatever we
need.

By default, this value evaluates to `false`. This is specifically to
support outside consumers compiling iDOM from source.

| Build | IS_DEVELOPMENT |
| ---  | ---  |
| UMD | `true` |
| minified UMD | `false` |
| Closure | `goog.DEBUG` |
| CommonJs | `production.env.NODE_ENV !== 'production’` |

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "babel-plugin-transform-es2015-block-scoping": "6.5.0",
     "babel-plugin-transform-es2015-computed-properties": "6.5.2",
     "babel-plugin-transform-es2015-template-literals": "6.6.5",
-    "babel-plugin-transform-inline-environment-variables": "6.5.0",
     "chai": "3.0.0",
     "del": "2.0.2",
     "google-closure-compiler": "20170409.0.0",
@@ -47,6 +46,7 @@
     "rollup": "0.25.1",
     "rollup-plugin-babel": "2.3.9",
     "rollup-plugin-multi-entry": "1.1.0",
+    "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "0.3.1",
     "rollup-stream": "1.4.1",
     "sinon": "1.15.4",
