Some fixes for goog.module output.
- Use a template return value type for the function passed to patchFactory so that it works for both patchInner and patchOuter.
- Rename global to globalObj, since it causes a property read before declaration when named the same as `global`.
- Do not run Babel on output as it meses with type casts and Closure Compiler can handle ES6.
- Do not treeshake with Rollup since it removes a typedef. The consumer of the output should treeshake / remove dead code instead.

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
     "browser": true
   },
   "globals": {
-    "process": true
+    "process": true,
+    "global": true
   },
   "rules": {
     "no-unused-vars": [2, {
