--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "karma-sinon-chai": "1.0.0",
     "lolex": "1.4.0",
     "mocha": "2.2.5",
-    "rollup": "0.25.1",
+    "rollup": "0.50.0",
     "rollup-plugin-babel": "2.3.9",
     "rollup-plugin-multi-entry": "1.1.0",
-    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-replace": "1.1.1",
     "rollup-plugin-uglify": "0.3.1",
-    "rollup-stream": "1.4.1",
+    "rollup-stream": "1.24.1",
     "sinon": "1.15.4",
     "sinon-chai": "2.8.0",
     "vinyl-buffer": "1.0.0",
