--- a/package.json
+++ b/package.json
@@ -16,43 +16,59 @@
   ],
   "scripts": {
     "test": "gulp unit",
-    "lint": "gulp lint",
     "build": "gulp build",
     "dist": "gulp dist",
-    "prepublish": "npm run dist"
+    "prepublish": "npm run dist",
+    "update": "npm-check -u"
   },
   "devDependencies": {
-    "babel": "6.5.2",
-    "babel-plugin-check-es2015-constants": "6.3.13",
-    "babel-plugin-transform-es2015-arrow-functions": "6.5.2",
-    "babel-plugin-transform-es2015-block-scoping": "6.5.0",
-    "babel-plugin-transform-es2015-computed-properties": "6.5.2",
-    "babel-plugin-transform-es2015-template-literals": "6.6.5",
-    "chai": "3.0.0",
-    "del": "2.0.2",
-    "google-closure-compiler": "20170409.0.0",
-    "gulp": "3.9.0",
+    "@types/mocha": "^5.0.0",
+    "@types/sinon": "^4.3.0",
+    "@types/sinon-chai": "^2.7.29",
+    "babel": "^6.23.0",
+    "babel-plugin-check-es2015-constants": "^6.22.0",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
+    "babel-plugin-transform-es2015-computed-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
+    "chai": "^4.0.2",
+    "del": "^2.0.2",
+    "gulp": "^3.9.1",
     "gulp-eslint": "2.0.0",
+    "gulp-install": "^1.1.0",
+    "gulp-mocha": "^5.0.0",
     "gulp-replace": "0.5.4",
     "gulp-sourcemaps": "1.6.0",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "0.2.0",
-    "karma-firefox-launcher": "0.1.4",
-    "karma-mocha": "0.2.0",
-    "karma-rollup-preprocessor": "2.0.1",
-    "karma-sinon-chai": "1.0.0",
+    "gulp-typescript": "^4.0.2",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-nyan-reporter": "^0.2.5",
+    "karma-rollup-preprocessor": "^5.1.1",
+    "karma-sinon-chai": "^1.3.3",
+    "karma-typescript": "^3.0.8",
+    "karma-typescript-preprocessor": "^0.3.1",
     "lolex": "1.4.0",
-    "mocha": "2.2.5",
+    "mime": "^1.3.6",
+    "mocha": "^2.2.5",
     "rollup": "0.50.0",
     "rollup-plugin-babel": "2.3.9",
     "rollup-plugin-multi-entry": "1.1.0",
     "rollup-plugin-replace": "1.1.1",
+    "rollup-plugin-typescript": "^0.8.1",
     "rollup-plugin-uglify": "0.3.1",
     "rollup-stream": "1.24.1",
-    "sinon": "1.15.4",
-    "sinon-chai": "2.8.0",
-    "vinyl-buffer": "1.0.0",
+    "sinon": "^4.0.0",
+    "sinon-chai": "^2.9.0",
+    "source-map-support": "^0.5.4",
+    "typescript": "^2.8.1",
+    "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "1.1.0",
     "webcomponents.js": "0.7.2"
+  },
+  "dependencies": {
+    "@types/webcomponents.js": "^0.6.32",
+    "npm-check": "^5.6.0"
   }
 }
