--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "sinon": "^4.0.0",
     "sinon-chai": "^2.9.0",
     "source-map-support": "^0.5.4",
+    "tsickle": "^0.32.1",
     "typescript": "^2.8.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "1.1.0",
