fix files directive in package.json
no index.js but index.ts.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/google/incremental-dom.git"
   },
   "files": [
-    "index.js",
+    "index.ts",
     "src",
     "dist"
   ],
