Upgrade dependencies in package.json and add a bazel build for Incremental DOM (#402)
* Type changes to be compatible with TS 3.4
* Add build rules for Incremental DOM & bazel

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "build",
+    "outDir": "genfiles",
     "allowSyntheticDefaultImports": false,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
