--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "test": "gulp unit",
     "build": "gulp build",
     "dist": "gulp dist",
-    "prepublish": "npm run dist",
-    "update": "npm-check -u"
+    "update": "npm-check -u",
+    "prepack": "gulp dist",
+    "bazel": "bazel build :bundle"
   },
   "devDependencies": {
     "@types/mocha": "^5.0.0",
@@ -33,25 +34,25 @@
     "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "chai": "^4.0.2",
     "del": "^2.0.2",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-eslint": "2.0.0",
     "gulp-install": "^1.1.0",
     "gulp-mocha": "^5.0.0",
     "gulp-replace": "0.5.4",
     "gulp-sourcemaps": "1.6.0",
     "gulp-typescript": "^4.0.2",
-    "karma": "^2.0.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-nyan-reporter": "^0.2.5",
     "karma-rollup-preprocessor": "^5.1.1",
     "karma-sinon-chai": "^1.3.3",
-    "karma-typescript": "^3.0.8",
+    "karma-typescript": "^4.1.0",
     "karma-typescript-preprocessor": "^0.3.1",
     "lolex": "1.4.0",
     "mime": "^1.3.6",
-    "mocha": "^2.2.5",
+    "mocha": "^6.1.4",
     "rollup": "0.50.0",
     "rollup-plugin-babel": "2.3.9",
     "rollup-plugin-multi-entry": "1.1.0",
@@ -62,14 +63,14 @@
     "sinon": "^4.0.0",
     "sinon-chai": "^2.9.0",
     "source-map-support": "^0.5.4",
-    "tsickle": "^0.32.1",
-    "typescript": "^2.8.1",
+    "typescript": "~3.4.1",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "1.1.0",
-    "webcomponents.js": "0.7.2"
+    "vinyl-source-stream": "2.0.0",
+    "webcomponents.js": "0.7.2",
+    "@bazel/bazel": "^0.25.1",
+    "@bazel/typescript": "0.29.0"
   },
   "dependencies": {
-    "@types/webcomponents.js": "^0.6.32",
     "npm-check": "^5.6.0"
   }
 }
