Update to latest bazel
Introduce a .bazelrc with useful settings
Use the managed_directories feature so bazel doesn't download a second copy of dependencies

--- a/src/BUILD
+++ b/src/BUILD
@@ -1,4 +1,4 @@
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//:__subpackages__"])
 
 load("@npm_bazel_typescript//:defs.bzl", "ts_library")
 
