--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bazel": "bazel build :bundle"
   },
   "devDependencies": {
+    "@bazel/bazel": "^0.27.0",
+    "@bazel/typescript": "^0.32.2",
     "@types/mocha": "^5.0.0",
     "@types/sinon": "^4.3.0",
     "@types/sinon-chai": "^2.7.29",
@@ -66,9 +68,7 @@
     "typescript": "~3.4.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "2.0.0",
-    "webcomponents.js": "0.7.2",
-    "@bazel/bazel": "^0.25.1",
-    "@bazel/typescript": "0.29.0"
+    "webcomponents.js": "0.7.2"
   },
   "dependencies": {
     "npm-check": "^5.6.0"
