--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "devDependencies": {
     "@bazel/bazel": "^0.27.0",
-    "@bazel/typescript": "^0.32.2",
+    "@bazel/karma": "^0.33.0",
+    "@bazel/typescript": "^0.33.0",
     "@types/mocha": "^5.0.0",
     "@types/sinon": "^4.3.0",
     "@types/sinon-chai": "^2.7.29",
