use nodemodules/bazel instead of global

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,6 @@ jobs:
       - restore_cache:
           key: *cache_key
       - run: npm install
-      - run: bazel build ...
-      - run: bazel test ...
+      - run: ./node_modules/.bin/bazel build ...
+      - run: ./node_modules/.bin/bazel test ...
       - *save_cache
