--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "scripts": {
     "test": "gulp unit",
     "build": "gulp build",
-    "dist": "gulp dist",
+    "dist": "npm run lint && gulp dist",
     "update": "npm-check -u",
     "prepack": "gulp dist",
-    "bazel": "bazel build :bundle"
+    "bazel": "bazel build :bundle",
+    "lint": "eslint src/**.ts"
   },
   "devDependencies": {
     "@bazel/bazel": "^0.27.0",
@@ -29,6 +30,8 @@
     "@types/mocha": "^5.0.0",
     "@types/sinon": "^4.3.0",
     "@types/sinon-chai": "^2.7.29",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "babel": "^6.23.0",
     "babel-plugin-check-es2015-constants": "^6.22.0",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
@@ -37,6 +40,9 @@
     "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "chai": "^4.0.2",
     "del": "^2.0.2",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "gulp": "^4.0.2",
     "gulp-eslint": "2.0.0",
     "gulp-install": "^1.1.0",
@@ -56,6 +62,7 @@
     "lolex": "1.4.0",
     "mime": "^1.3.6",
     "mocha": "^6.1.4",
+    "prettier": "^1.18.2",
     "rollup": "0.50.0",
     "rollup-plugin-babel": "2.3.9",
     "rollup-plugin-multi-entry": "1.1.0",
