--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/google/incremental-dom.git"
   },
   "files": [
-    "index.js",
+    "index.ts",
     "src",
     "dist"
   ],
@@ -62,6 +62,7 @@
     "lolex": "1.4.0",
     "mime": "^1.3.6",
     "mocha": "^6.1.4",
+    "npm-check": "^5.6.0",
     "prettier": "^1.18.2",
     "rollup": "0.50.0",
     "rollup-plugin-babel": "2.3.9",
@@ -79,6 +80,5 @@
     "webcomponents.js": "0.7.2"
   },
   "dependencies": {
-    "npm-check": "^5.6.0"
   }
 }
