Create a release directory that mostly copies over all the files and creates a new debug.ts

--- a/src/BUILD
+++ b/src/BUILD
@@ -1,30 +1,12 @@
 package(default_visibility = ["//:__subpackages__"])
 
 load("@npm_bazel_typescript//:defs.bzl", "ts_library")
+load("//:constants.bzl", "RELEASE_FILES")
 
 ts_library(
     name = "src",
-    srcs = [
-        "assertions.ts",
-        "attributes.ts",
-        "changes.ts",
-        "context.ts",
-        "core.ts",
+    srcs = RELEASE_FILES + [
         "debug.ts",
-        "diff.ts",
-        "dom_util.ts",
-        "global.ts",
-        "node_data.ts",
-        "nodes.ts",
-        "notifications.ts",
-        "symbols.ts",
-        "types.ts",
-        "util.ts",
-        "virtual_elements.ts",
     ],
-)
-
-filegroup(
-    name = "files",
-    srcs = glob(["*.ts"])
+    tsickle_typed = True,
 )
