--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "bazel test test:unit_tests",
     "build": "bazel build :dev",
-    "dist": "npm run lint && bazel build :npm",
+    "dist": "npm run lint && npm run test && npm run prepack",
     "prepack": "bazel build :npm",
     "update": "npm-check -u",
     "lint": "eslint src/**.ts"
