Some changes to make npm pack work from the current directory.
- Use short license header for binaries again
- Copy files to dist so they work for perf examples like before

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "scripts": {
     "test": "bazel test test:unit_tests",
     "build": "bazel build :dev",
-    "dist": "npm run lint && npm run test && npm run prepack",
-    "prepack": "bazel build :npm",
+    "dist": "npm run lint && npm run test && npm run dist-build",
+    "dist-build": "bazel build :npm && rm -rf dist && mkdir -p dist && cp build/bin/npm/* dist",
+    "prepack": "npm run dist",
     "update": "npm-check -u",
     "lint": "eslint src/**.ts"
   },
