--- a/package.json
+++ b/package.json
@@ -30,52 +30,24 @@
     "@types/sinon-chai": "^2.7.29",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
-    "babel": "^6.23.0",
-    "babel-plugin-check-es2015-constants": "^6.22.0",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
-    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
-    "babel-plugin-transform-es2015-computed-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "chai": "^4.0.2",
-    "del": "^2.0.2",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "gulp": "^4.0.2",
-    "gulp-eslint": "2.0.0",
-    "gulp-install": "^1.1.0",
-    "gulp-mocha": "^5.0.0",
-    "gulp-replace": "0.5.4",
-    "gulp-sourcemaps": "1.6.0",
-    "gulp-typescript": "^4.0.2",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-nyan-reporter": "^0.2.5",
-    "karma-rollup-preprocessor": "^5.1.1",
     "karma-sinon-chai": "^1.3.3",
     "karma-typescript": "^4.1.0",
     "karma-typescript-preprocessor": "^0.3.1",
-    "lolex": "1.4.0",
-    "mime": "^1.3.6",
     "mocha": "^6.1.4",
     "npm-check": "^5.6.0",
     "prettier": "^1.18.2",
-    "rollup": "0.50.0",
-    "rollup-plugin-babel": "2.3.9",
-    "rollup-plugin-multi-entry": "1.1.0",
-    "rollup-plugin-replace": "1.1.1",
-    "rollup-plugin-typescript": "^0.8.1",
-    "rollup-plugin-uglify": "0.3.1",
-    "rollup-stream": "1.24.1",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.9.0",
-    "source-map-support": "^0.5.4",
-    "typescript": "~3.4.1",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "2.0.0",
-    "webcomponents.js": "0.7.2"
+    "typescript": "~3.4.1"
   },
   "dependencies": {}
 }
