--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "prettier": "^1.18.2",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.9.0",
-    "typescript": "~3.4.1"
+    "terser": "^4.1.2",
+    "typescript": "~3.4.1",
+    "uglify-js": "^3.6.0"
   },
   "dependencies": {}
 }
