Switch from travis to circleci, using a workflow that build and tests using bazel. (#410)

--- a/src/BUILD
+++ b/src/BUILD
@@ -1,24 +1,25 @@
 package(default_visibility = ["//:__subpackages__"])
 
 load("@npm_bazel_typescript//:defs.bzl", "ts_library")
+load("//:constants.bzl", "RELEASE_FILES")
 
 ts_library(
     name = "src",
     srcs = [
-        "assertions.ts",
-        "attributes.ts",
-        "changes.ts",
-        "context.ts",
-        "core.ts",
-        "diff.ts",
-        "dom_util.ts",
-        "global.ts",
-        "node_data.ts",
-        "nodes.ts",
-        "notifications.ts",
-        "symbols.ts",
-        "types.ts",
-        "util.ts",
-        "virtual_elements.ts",
+      ":all_files",
+    ],
+    tsickle_typed = True,
+)
+
+filegroup(
+    name = "release_files",
+    srcs = RELEASE_FILES,
+)
+
+filegroup(
+    name = "all_files",
+    srcs = [
+        ":release_files",
+        "debug.ts",
     ],
 )
