--- a/test/BUILD
+++ b/test/BUILD
@@ -5,7 +5,7 @@ ts_library(
     name = "test_lib",
     srcs = glob(["**/*.ts"]),
     deps = [
-        "//:app",
+        "//:dev",
         "//src",
         "@npm//@types",
     ]
@@ -16,6 +16,7 @@ ts_web_test(
     # chai and sinon-chai are not require()d in the code, we expect them to be globals
     # bootstrap their distro first on the page.
     bootstrap = [
+        "util/globals.js",
         "@npm//:node_modules/chai/chai.js",
         "@npm//:node_modules/sinon-chai/lib/sinon-chai.js",
     ],
