--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "bazel test test:unit_tests",
     "build": "bazel build :dev",
     "dist": "npm run lint && npm run test && bazel build :npm",
+    "publish": "npm run dist && bazel run :npm.publish",
     "update": "npm-check -u",
     "lint": "eslint src/**.ts"
   },
