--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
     "dist"
   ],
   "scripts": {
-    "test": "bazel test test:unit_tests",
-    "build": "bazel build :dev",
-    "dist": "npm run lint && npm run test && bazel build :npm",
-    "publish": "npm run dist && bazel run :npm.publish",
+    "test": "bazelisk test test:unit_tests",
+    "build": "bazelisk build :dev",
+    "dist": "npm run lint && npm run test && bazelisk build :npm",
+    "publish": "npm run dist && bazelisk run :npm.publish",
     "update": "npm-check -u",
     "lint": "eslint src/**.ts"
   },
   "devDependencies": {
-    "@bazel/bazel": "^0.27.0",
-    "@bazel/ibazel": "^0.10.3",
-    "@bazel/karma": "^0.33.0",
-    "@bazel/typescript": "^0.33.0",
+    "@bazel/bazelisk": "^1.11.0",
+    "@bazel/concatjs": "^4.6.0",
+    "@bazel/ibazel": "^0.15.10",
+    "@bazel/rollup": "^4.6.0",
+    "@bazel/typescript": "^4.6.0",
+    "@rollup/plugin-buble": "^0.21.3",
     "@types/mocha": "^5.0.0",
     "@types/sinon": "^4.3.0",
     "@types/sinon-chai": "^2.7.29",
@@ -39,13 +41,17 @@
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
+    "karma-jasmine": "^4.0.1",
+    "karma-requirejs": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.8",
     "mocha": "^6.1.4",
     "npm-check": "^5.6.0",
     "prettier": "^1.18.2",
+    "requirejs": "^2.3.6",
+    "rollup": "^2.63.0",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.9.0",
     "typescript": "~3.4.1",
     "uglify-js": "^3.6.0"
-  },
-  "dependencies": {}
+  }
 }
