--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   },
   "devDependencies": {
     "@bazel/bazelisk": "^1.11.0",
-    "@bazel/concatjs": "^4.6.0",
+    "@bazel/concatjs": "4.6.0",
     "@bazel/ibazel": "^0.15.10",
-    "@bazel/rollup": "^4.6.0",
-    "@bazel/typescript": "^4.6.0",
+    "@bazel/rollup": "4.6.0",
+    "@bazel/typescript": "4.6.0",
     "@rollup/plugin-buble": "^0.21.3",
     "@types/mocha": "^5.0.0",
     "@types/sinon": "^4.3.0",
@@ -51,7 +51,10 @@
     "rollup": "^2.63.0",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.9.0",
-    "typescript": "~3.4.1",
+    "tsickle": "^0.46.0",
     "uglify-js": "^3.6.0"
+  },
+  "dependencies": {
+    "typescript": "~4.3.2"
   }
 }
